--- a/index.html
+++ b/index.html
@@ -3,166 +3,140 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Md. Arifuzzaman Shaon</title>
+  <title>Md. Arifuzzaman Shaon - Portfolio</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
+      text-align: center;
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: white;
     }
 
     header {
-      text-align: center;
-      padding: 40px 20px 20px 20px;
-    }
-
-    header img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      border: 3px solid #00b4d8;
-      object-fit: cover;
+      padding: 40px 20px;
     }
 
     header h1 {
-      margin: 15px 0 5px 0;
       font-size: 28px;
+      margin: 10px 0;
     }
 
-    header p {
-      font-size: 16px;
-      color: #ccc;
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #00b4d8;
     }
 
     .social-icons {
-      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin: 20px 0;
     }
 
     .social-icons a {
-      margin: 0 10px;
-      display: inline-block;
-      text-decoration: none;
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: transform 0.3s, background 0.3s;
     }
 
-    .social-icons svg {
-      width: 36px;
-      height: 36px;
-      vertical-align: middle;
+    .social-icons a:hover {
+      transform: scale(1.1);
+      background-color: #00b4d8;
     }
 
-    section {
-      max-width: 800px;
-      margin: 50px auto;
-      background: rgba(255,255,255,0.1);
-      border-radius: 15px;
-      padding: 20px;
-      text-align: left;
+    .social-icons img {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
     }
 
-    section h2 {
-      text-align: center;
-      color: #00b4d8;
-      margin-bottom: 20px;
-    }
-
-    .btn-group {
-      text-align: center;
-      margin-top: 20px;
+    .btn-container {
+      margin: 25px;
     }
 
     .btn {
       background-color: #00b4d8;
       color: white;
-      padding: 12px 25px;
+      padding: 12px 24px;
+      border: none;
       border-radius: 25px;
       text-decoration: none;
       font-weight: bold;
       margin: 10px;
       display: inline-block;
-      transition: 0.3s;
+      transition: background 0.3s;
     }
 
     .btn:hover {
       background-color: #0077b6;
     }
 
+    section {
+      max-width: 850px;
+      margin: 30px auto;
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 20px;
+      text-align: left;
+    }
+
+    h2 {
+      color: #00b4d8;
+    }
+
     footer {
-      text-align: center;
-      margin-top: 50px;
+      margin-top: 40px;
       padding: 20px;
       font-size: 14px;
       color: #ccc;
     }
 
-    @media(max-width:600px){
-      header h1 { font-size:24px; }
-      .btn { padding:8px 16px; font-size:14px; margin:5px; }
-      .social-icons svg { width:28px; height:28px; }
+    @media (max-width: 600px) {
+      header h1 { font-size: 22px; }
+      .btn { padding: 10px 18px; font-size: 14px; }
+      .social-icons a { width: 40px; height: 40px; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
   <header>
-    <img src="profile.png" alt="Profile Photo">
+    <img src="profile.png" alt="Profile Photo" class="profile-img">
     <h1>Md. Arifuzzaman Shaon</h1>
-    <p>Welfare Officer at AMANN Bangladesh Ltd.</p>
+    <p>Welfare Officer | Human Resource Management | Gazipur, Bangladesh</p>
 
-    <!-- Social Media Icons (Original Color) -->
     <div class="social-icons">
-      <!-- Facebook -->
-      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
-        <svg viewBox="0 0 24 24">
-          <path fill="#1877F2" d="M22.675 0h-21.35C.595 0 0 .593 0 1.326v21.348C0 23.406.595 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.794.716-1.794 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.324-.594 1.324-1.326V1.326C24 .593 23.405 0 22.675 0z"/>
-        </svg>
-      </a>
-      <!-- Instagram -->
-      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">
-        <svg viewBox="0 0 24 24">
-          <path fill="#E4405F" d="M12 2.163c3.204 0 3.584.012 4.85.07 1.17.056 1.97.24 2.427.415a4.92 4.92 0 011.794 1.04 4.918 4.918 0 011.04 1.794c.175.457.359 1.257.415 2.427.058 1.266.07 1.645.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.415 2.427a4.918 4.918 0 01-1.04 1.794 4.918 4.918 0 01-1.794 1.04c-.457.175-1.257.359-2.427.415-1.266.058-1.645.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.97-.24-2.427-.415a4.918 4.918 0 01-1.794-1.04 4.918 4.918 0 01-1.04-1.794c-.175-.457-.359-1.257-.415-2.427C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.056-1.17.24-1.97.415-2.427a4.918 4.918 0 011.04-1.794 4.918 4.918 0 011.794-1.04c.457-.175 1.257-.359 2.427-.415C8.416 2.175 8.796 2.163 12 2.163z"/>
-          <circle fill="#fff" cx="12" cy="12" r="3.5"/>
-          <circle fill="#fff" cx="18.406" cy="5.594" r="1.44"/>
-        </svg>
-      </a>
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">
-        <svg viewBox="0 0 24 24">
-          <path fill="#0077B5" d="M22.23 0H1.77C.792 0 0 .774 0 1.728v20.544C0 23.226.792 24 1.77 24h20.46C23.208 24 24 23.226 24 22.272V1.728C24 .774 23.208 0 22.23 0zM7.12 20.452H3.554V9h3.566v11.452zM5.337 7.616a2.064 2.064 0 110-4.128 2.064 2.064 0 010 4.128zM20.452 20.452h-3.556v-5.594c0-1.333-.025-3.047-1.856-3.047-1.857 0-2.14 1.45-2.14 2.949v5.692h-3.555V9h3.415v1.561h.049c.476-.902 1.637-1.852 3.367-1.852 3.6 0 4.265 2.37 4.265 5.452v6.291z"/>
-        </svg>
-      </a>
-      <!-- Email -->
-      <a href="mailto:hr.arifuzzamanshaon@gmail.com">
-        <svg viewBox="0 0 24 24">
-          <path fill="#EA4335" d="M12 13.065L.001 4.5V20.25C0 21.215.785 22 1.75 22h20.5c.965 0 1.75-.785 1.75-1.75V4.5L12 13.065zm0-2.158l11.25-7.017v-.89c0-.965-.785-1.75-1.75-1.75H2.5c-.965 0-1.75.785-1.75 1.75v.89L12 10.907z"/>
-        </svg>
-      </a>
+      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
+      <a href="mailto:hr.arifuzzamanshaon@gmail.com"><img src="images/email.png" alt="Email"></a>
+    </div>
+
+    <div class="btn-container">
+      <a href="education.html" class="btn">🎓 Education</a>
+      <a href="experience.html" class="btn">💼 Experience</a>
+      <a href="contact.html" class="btn">📞 Contact</a>
     </div>
   </header>
 
-  <!-- About Me Section -->
-  <section id="about-me">
-    <h2>👤 About Me</h2>
+  <section>
+    <h2>About Me</h2>
     <p>
-      I am Md. Arifuzzaman Shaon, currently working as Welfare Officer at AMANN Bangladesh Ltd.
-      Experienced in Human Resource Management and passionate about organizational development.
+      I am Md. Arifuzzaman Shaon, a passionate HR professional currently working as a Welfare Officer 
+      at AMANN Bangladesh Ltd. With a strong background in Human Resource Management, 
+      I focus on employee relations, team supervision, and ensuring a healthy workplace environment.
+      My vision is to grow as a skilled HR leader who creates value through dedication and empathy.
     </p>
-  </section>
-
-  <!-- Buttons Section -->
-  <section id="links">
-    <div class="btn-group">
-      <a href="education.html" class="btn">🎓 Education</a>
-      <a href="experience.html" class="btn">💼 Work Experience</a>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>📞 Contact</h2>
-    <p style="text-align:center;">Email: <a href="mailto:hr.arifuzzamanshaon@gmail.com" style="color:#00b4d8;">hr.arifuzzamanshaon@gmail.com</a></p>
   </section>
 
   <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
