--- a/education.html
+++ b/education.html
@@ -6,7 +6,7 @@
   <title>Education - Md. Arifuzzaman Shaon</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
       text-align: center;
@@ -14,31 +14,17 @@
       color: white;
     }
 
-    header {
-      padding: 30px 20px 50px 20px;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-    }
-
-    header a.btn {
-      display: inline-block;
-      margin-top: 20px;
+    header { padding: 40px 20px; }
+    h1 { font-size: 26px; margin-bottom: 10px; }
+    a.btn {
       background-color: #00b4d8;
       color: white;
       padding: 10px 20px;
-      border: none;
       border-radius: 25px;
       text-decoration: none;
       font-weight: bold;
-      transition: background 0.3s;
     }
-
-    header a.btn:hover {
-      background-color: #0077b6;
-    }
+    a.btn:hover { background-color: #0077b6; }
 
     section {
       max-width: 900px;
@@ -49,54 +35,19 @@
       text-align: left;
     }
 
-    h2 {
-      color: #00b4d8;
-      margin-bottom: 15px;
-    }
+    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    th, td { border: 1px solid white; padding: 10px; }
+    th { background: rgba(255,255,255,0.2); }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-
-    table, th, td {
-      border: 1px solid white;
-    }
-
-    th, td {
-      padding: 10px;
-      text-align: left;
-    }
-
-    th {
-      background-color: rgba(255,255,255,0.2);
-    }
-
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      font-size: 14px;
-      color: #ccc;
-    }
+    footer { margin-top: 40px; padding: 20px; color: #ccc; }
 
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 24px;
-      }
-      header a.btn {
-        padding: 8px 16px;
-        font-size: 14px;
-      }
-      table th, table td {
-        font-size: 14px;
-        padding: 8px;
-      }
+      h1 { font-size: 22px; }
+      th, td { font-size: 14px; padding: 8px; }
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>🎓 Education - Md. Arifuzzaman Shaon</h1>
     <a href="index.html" class="btn">🏠 Back to Home</a>
@@ -105,52 +56,15 @@
   <section>
     <h2>Education Details</h2>
     <table>
-      <tr>
-        <th>Degree</th>
-        <th>Institute</th>
-        <th>Subject</th>
-        <th>Year</th>
-        <th>Result</th>
-      </tr>
-      <tr>
-        <td>Postgraduate Diploma (PGD)</td>
-        <td>Academy of Business Professionals</td>
-        <td>Human Resource Management</td>
-        <td>Running</td>
-        <td>-</td>
-      </tr>
-      <tr>
-        <td>Masters of Business Administration (MBA)</td>
-        <td>Uttara University</td>
-        <td>Human Resource Management</td>
-        <td>2024</td>
-        <td>3.40 / 4.00</td>
-      </tr>
-      <tr>
-        <td>Bachelor of Business Studies (BBS)</td>
-        <td>Bhawal Badre Alam Govt. College</td>
-        <td>Business Studies</td>
-        <td>2019</td>
-        <td>2.55 / 4.00</td>
-      </tr>
-      <tr>
-        <td>Higher Secondary Certificate (HSC)</td>
-        <td>Dr. Adbur Razzak Municipal College</td>
-        <td>Business Studies</td>
-        <td>2016</td>
-        <td>3.50 / 5.00</td>
-      </tr>
-      <tr>
-        <td>Secondary School Certificate (SSC)</td>
-        <td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td>
-        <td>Business Studies</td>
-        <td>2014</td>
-        <td>4.13 / 5.00</td>
-      </tr>
+      <tr><th>Degree</th><th>Institute</th><th>Subject</th><th>Year</th><th>Result</th></tr>
+      <tr><td>PGD</td><td>Academy of Business Professionals</td><td>HRM</td><td>Running</td><td>-</td></tr>
+      <tr><td>MBA</td><td>Uttara University</td><td>HRM</td><td>2024</td><td>3.40 / 4.00</td></tr>
+      <tr><td>BBS</td><td>Bhawal Badre Alam Govt. College</td><td>Business Studies</td><td>2019</td><td>2.55 / 4.00</td></tr>
+      <tr><td>HSC</td><td>Dr. Adbur Razzak Municipal College</td><td>Business Studies</td><td>2016</td><td>3.50 / 5.00</td></tr>
+      <tr><td>SSC</td><td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td><td>Business Studies</td><td>2014</td><td>4.13 / 5.00</td></tr>
     </table>
   </section>
 
   <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
-
 </body>
 </html>
