--- a/experience.html
+++ b/experience.html
@@ -5,41 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Work Experience - Md. Arifuzzaman Shaon</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
+    body { 
+      font-family: 'Segoe UI', sans-serif; 
+      margin: 0; padding: 0; text-align: center;
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: white;
     }
-
-    header {
-      padding: 30px 20px 50px 20px;
+    header { padding: 40px 20px; }
+    h1 { font-size: 26px; margin-bottom: 10px; color: #00b4d8; }
+    a.btn {
+      background-color: #00b4d8; color: white;
+      padding: 10px 20px; border-radius: 25px;
+      text-decoration: none; font-weight: bold;
     }
-
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-    }
-
-    header a.btn {
-      display: inline-block;
-      margin-top: 20px;
-      background-color: #00b4d8;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    header a.btn:hover {
-      background-color: #0077b6;
-    }
-
+    a.btn:hover { background-color: #0077b6; }
     section {
       max-width: 900px;
       margin: 30px auto;
@@ -48,48 +27,17 @@
       padding: 20px;
       text-align: left;
     }
-
-    h2 {
-      color: #00b4d8;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-
-    table, th, td {
-      border: 1px solid white;
-    }
-
-    th, td {
-      padding: 10px;
-      text-align: left;
-    }
-
-    th {
-      background-color: rgba(255,255,255,0.2);
-    }
-
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      font-size: 14px;
-      color: #ccc;
-    }
+    h2 { color: #00b4d8; }
+    ul { line-height: 1.8; padding-left: 20px; }
+    footer { margin-top: 40px; padding: 20px; color: #ccc; }
 
     @media (max-width: 600px) {
-      header h1 { font-size: 24px; }
-      header a.btn { padding: 8px 16px; font-size: 14px; }
-      table th, table td { font-size: 14px; padding: 8px; }
+      h1 { font-size: 22px; }
+      ul { font-size: 14px; }
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>💼 Work Experience - Md. Arifuzzaman Shaon</h1>
     <a href="index.html" class="btn">🏠 Back to Home</a>
@@ -97,29 +45,16 @@
 
   <section>
     <h2>Experience Details</h2>
-    <table>
-      <tr>
-        <th>Position</th>
-        <th>Company</th>
-        <th>Period</th>
-        <th>Headquarters / Address</th>
-      </tr>
-      <tr>
-        <td>Contractual Employee Supervisor</td>
-        <td>ABID Enterprise</td>
-        <td>Dec 2016 – June 2025</td>
-        <td>Gazipur, Holding#432, T&T Rd, Telipara, Gazipur City Corporation, Gazipur-1702</td>
-      </tr>
-      <tr>
-        <td>Welfare Officer</td>
-        <td>AMANN Bangladesh Ltd.</td>
-        <td>July 2025 – Present</td>
-        <td>Plot # RS 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur</td>
-      </tr>
-    </table>
+    <ul>
+      <li>Contractual Employee Supervisor at <b>ABID Enterprise</b> (Dec 2016 – June 2025)<br>
+        Headquarters: Gazipur, Holding#432, T&T Rd, Telipara, Gazipur City Corporation, Gazipur-1702.
+      </li>
+      <li>Welfare Officer at <b>AMANN Bangladesh Ltd.</b> (July 2025 – Present)<br>
+        Plot # RS 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur.
+      </li>
+    </ul>
   </section>
 
   <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
-
 </body>
 </html>
