--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
       border: 3px solid #00b4d8;
     }
 
+    /* Social Icons */
     .social-icons {
       display: flex;
       justify-content: center;
       gap: 15px;
       margin: 20px 0;
+      flex-wrap: wrap;
     }
 
     .social-icons a {
@@ -55,11 +57,12 @@
     }
 
     .social-icons img {
-      width: 25px;
-      height: 25px;
+      width: 24px;
+      height: 24px;
       border-radius: 50%;
     }
 
+    /* Buttons */
     .btn-container {
       margin: 25px;
     }
@@ -115,11 +118,23 @@
     <h1>Md. Arifuzzaman Shaon</h1>
     <p>Welfare Officer | Human Resource Management | Gazipur, Bangladesh</p>
 
+    <!-- Social Media Icons (SVG CDN version) -->
     <div class="social-icons">
-      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
-      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
-      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
-      <a href="mailto:hr.arifuzzamanshaon@gmail.com"><img src="images/email.png" alt="Email"></a>
+      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
+      </a>
+      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://about.me/arifuzzamanshaon" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/aboutdotme.svg" alt="About.me">
+      </a>
+      <a href="mailto:hr.arifuzzamanshaon@gmail.com">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/gmail.svg" alt="Gmail">
+      </a>
     </div>
 
     <div class="btn-container">
