--- a/education.html
+++ b/education.html
@@ -14,8 +14,16 @@
       color: white;
     }
 
-    header { padding: 40px 20px; }
-    h1 { font-size: 26px; margin-bottom: 10px; }
+    header {
+      padding: 40px 20px;
+    }
+
+    h1 {
+      font-size: 26px;
+      margin-bottom: 10px;
+      color: #00b4d8;
+    }
+
     a.btn {
       background-color: #00b4d8;
       color: white;
@@ -23,8 +31,12 @@
       border-radius: 25px;
       text-decoration: none;
       font-weight: bold;
+      transition: background 0.3s;
     }
-    a.btn:hover { background-color: #0077b6; }
+
+    a.btn:hover {
+      background-color: #0077b6;
+    }
 
     section {
       max-width: 900px;
@@ -35,15 +47,35 @@
       text-align: left;
     }
 
-    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-    th, td { border: 1px solid white; padding: 10px; }
-    th { background: rgba(255,255,255,0.2); }
+    h2 {
+      color: #00b4d8;
+    }
 
-    footer { margin-top: 40px; padding: 20px; color: #ccc; }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+
+    th, td {
+      border: 1px solid white;
+      padding: 10px;
+    }
+
+    th {
+      background: rgba(255,255,255,0.2);
+    }
+
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      color: #ccc;
+    }
 
     @media (max-width: 600px) {
       h1 { font-size: 22px; }
       th, td { font-size: 14px; padding: 8px; }
+      section { margin: 20px; padding: 15px; }
     }
   </style>
 </head>
@@ -57,10 +89,10 @@
     <h2>Education Details</h2>
     <table>
       <tr><th>Degree</th><th>Institute</th><th>Subject</th><th>Year</th><th>Result</th></tr>
-      <tr><td>PGD</td><td>Academy of Business Professionals</td><td>HRM</td><td>Running</td><td>-</td></tr>
-      <tr><td>MBA</td><td>Uttara University</td><td>HRM</td><td>2024</td><td>3.40 / 4.00</td></tr>
+      <tr><td>Postgraduate Diploma (PGD)</td><td>Academy of Business Professionals</td><td>Human Resource Management</td><td>Running</td><td>-</td></tr>
+      <tr><td>MBA</td><td>Uttara University</td><td>Human Resource Management</td><td>2024</td><td>3.40 / 4.00</td></tr>
       <tr><td>BBS</td><td>Bhawal Badre Alam Govt. College</td><td>Business Studies</td><td>2019</td><td>2.55 / 4.00</td></tr>
-      <tr><td>HSC</td><td>Dr. Adbur Razzak Municipal College</td><td>Business Studies</td><td>2016</td><td>3.50 / 5.00</td></tr>
+      <tr><td>HSC</td><td>Dr. Abdur Razzak Municipal College</td><td>Business Studies</td><td>2016</td><td>3.50 / 5.00</td></tr>
       <tr><td>SSC</td><td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td><td>Business Studies</td><td>2014</td><td>4.13 / 5.00</td></tr>
     </table>
   </section>
