--- a/experience.html
+++ b/experience.html
@@ -17,6 +17,7 @@
       background-color: #00b4d8; color: white;
       padding: 10px 20px; border-radius: 25px;
       text-decoration: none; font-weight: bold;
+      transition: background 0.3s;
     }
     a.btn:hover { background-color: #0077b6; }
     section {
@@ -29,11 +30,14 @@
     }
     h2 { color: #00b4d8; }
     ul { line-height: 1.8; padding-left: 20px; }
+    li { margin-bottom: 15px; }
+
     footer { margin-top: 40px; padding: 20px; color: #ccc; }
 
     @media (max-width: 600px) {
       h1 { font-size: 22px; }
       ul { font-size: 14px; }
+      section { margin: 20px; padding: 15px; }
     }
   </style>
 </head>
@@ -46,10 +50,10 @@
   <section>
     <h2>Experience Details</h2>
     <ul>
-      <li>Contractual Employee Supervisor at <b>ABID Enterprise</b> (Dec 2016 – June 2025)<br>
-        Headquarters: Gazipur, Holding#432, T&T Rd, Telipara, Gazipur City Corporation, Gazipur-1702.
+      <li><b>Contractual Employee Supervisor</b> at ABID Enterprise (Dec 2016 – June 2025)<br>
+        Headquarters: Holding #432, T&T Rd, Telipara, Gazipur City Corporation, Gazipur-1702.
       </li>
-      <li>Welfare Officer at <b>AMANN Bangladesh Ltd.</b> (July 2025 – Present)<br>
+      <li><b>Welfare Officer</b> at AMANN Bangladesh Ltd. (July 2025 – Present)<br>
         Plot # RS 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur.
       </li>
     </ul>
