--- a/experience.html
+++ b/experience.html
@@ -5,21 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Work Experience - Md. Arifuzzaman Shaon</title>
   <style>
-    body { 
-      font-family: 'Segoe UI', sans-serif; 
-      margin: 0; padding: 0; text-align: center;
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0; padding: 0;
+      text-align: center;
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: white;
     }
+
     header { padding: 40px 20px; }
-    h1 { font-size: 26px; margin-bottom: 10px; color: #00b4d8; }
+    h1 { color: #00b4d8; font-size: 26px; margin-bottom: 10px; }
+
     a.btn {
-      background-color: #00b4d8; color: white;
-      padding: 10px 20px; border-radius: 25px;
-      text-decoration: none; font-weight: bold;
-      transition: background 0.3s;
+      background-color: #00b4d8;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
     }
     a.btn:hover { background-color: #0077b6; }
+
     section {
       max-width: 900px;
       margin: 30px auto;
@@ -27,21 +33,47 @@
       border-radius: 15px;
       padding: 20px;
       text-align: left;
+      overflow-x: auto;
     }
-    h2 { color: #00b4d8; }
-    ul { line-height: 1.8; padding-left: 20px; }
-    li { margin-bottom: 15px; }
 
-    footer { margin-top: 40px; padding: 20px; color: #ccc; }
+    h2 { color: #00b4d8; text-align: center; margin-bottom: 15px; }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      min-width: 600px;
+    }
+
+    th, td {
+      border: 1px solid rgba(255,255,255,0.3);
+      padding: 10px;
+      text-align: center;
+      white-space: nowrap;
+    }
+
+    th {
+      background: rgba(255,255,255,0.2);
+      color: #00b4d8;
+    }
+
+    tr:nth-child(even) { background: rgba(255,255,255,0.05); }
+
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      color: #ccc;
+      font-size: 14px;
+    }
 
     @media (max-width: 600px) {
+      section { padding: 10px; }
+      table { font-size: 13px; }
       h1 { font-size: 22px; }
-      ul { font-size: 14px; }
-      section { margin: 20px; padding: 15px; }
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>💼 Work Experience - Md. Arifuzzaman Shaon</h1>
     <a href="index.html" class="btn">🏠 Back to Home</a>
@@ -49,14 +81,21 @@
 
   <section>
     <h2>Experience Details</h2>
-    <ul>
-      <li><b>Contractual Employee Supervisor</b> at ABID Enterprise (Dec 2016 – June 2025)<br>
-        Headquarters: Holding #432, T&T Rd, Telipara, Gazipur City Corporation, Gazipur-1702.
-      </li>
-      <li><b>Welfare Officer</b> at AMANN Bangladesh Ltd. (July 2025 – Present)<br>
-        Plot # RS 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur.
-      </li>
-    </ul>
+    <table>
+      <tr><th>Position</th><th>Organization</th><th>Duration</th><th>Location</th></tr>
+      <tr>
+        <td>Supervisor (Contractual Employee)</td>
+        <td>ABID Enterprise</td>
+        <td>Dec 2016 – June 2025</td>
+        <td>Telipara, Gazipur City Corporation, Gazipur-1702</td>
+      </tr>
+      <tr>
+        <td>Welfare Officer</td>
+        <td>AMANN Bangladesh Ltd.</td>
+        <td>July 2025 – Present</td>
+        <td>Tapirbari, Mawna, Sreepur, Gazipur</td>
+      </tr>
+    </table>
   </section>
 
   <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
