--- a/education.html
+++ b/education.html
@@ -33,19 +33,19 @@
       border-radius: 15px;
       padding: 20px;
       text-align: left;
-      overflow-x: auto; /* For mobile horizontal scroll */
+      overflow-x: auto; /* Responsive scroll for small screens */
     }
 
-    h2 { color: #00b4d8; margin-bottom: 15px; text-align: center; }
+    h2 { color: #00b4d8; text-align: center; margin-bottom: 15px; }
 
     table {
       width: 100%;
       border-collapse: collapse;
-      min-width: 600px; /* To keep structure for small screens */
+      min-width: 600px; /* Keep structure on small screens */
     }
 
     th, td {
-      border: 1px solid rgba(255, 255, 255, 0.3);
+      border: 1px solid rgba(255,255,255,0.3);
       padding: 10px;
       text-align: center;
       white-space: nowrap;
@@ -82,12 +82,48 @@
   <section>
     <h2>Education Details</h2>
     <table>
-      <tr><th>Degree</th><th>Institute</th><th>Subject</th><th>Year</th><th>Result</th></tr>
-      <tr><td>PGD</td><td>Academy of Business Professionals</td><td>HRM</td><td>Running</td><td>-</td></tr>
-      <tr><td>MBA</td><td>Uttara University</td><td>HRM</td><td>2024</td><td>3.40 / 4.00</td></tr>
-      <tr><td>BBS</td><td>Bhawal Badre Alam Govt. College</td><td>Business Studies</td><td>2019</td><td>2.55 / 4.00</td></tr>
-      <tr><td>HSC</td><td>Dr. Adbur Razzak Municipal College</td><td>Business Studies</td><td>2016</td><td>3.50 / 5.00</td></tr>
-      <tr><td>SSC</td><td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td><td>Business Studies</td><td>2014</td><td>4.13 / 5.00</td></tr>
+      <tr>
+        <th>Degree</th>
+        <th>Institute</th>
+        <th>Subject</th>
+        <th>Year</th>
+        <th>Result</th>
+      </tr>
+      <tr>
+        <td>Postgraduate Diploma (PGD)</td>
+        <td>Academy of Business Professionals</td>
+        <td>Human Resource Management</td>
+        <td>Running</td>
+        <td>-</td>
+      </tr>
+      <tr>
+        <td>Masters of Business Administration (MBA)</td>
+        <td>Uttara University</td>
+        <td>Human Resource Management</td>
+        <td>2024</td>
+        <td>3.40 / 4.00</td>
+      </tr>
+      <tr>
+        <td>Bachelor of Business Studies (BBS)</td>
+        <td>Bhawal Badre Alam Govt. College</td>
+        <td>Business Studies</td>
+        <td>2019</td>
+        <td>2.55 / 4.00</td>
+      </tr>
+      <tr>
+        <td>Higher Secondary Certificate (HSC)</td>
+        <td>Dr. Adbur Razzak Municipal College</td>
+        <td>Business Studies</td>
+        <td>2016</td>
+        <td>3.50 / 5.00</td>
+      </tr>
+      <tr>
+        <td>Secondary School Certificate (SSC)</td>
+        <td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td>
+        <td>Business Studies</td>
+        <td>2014</td>
+        <td>4.13 / 5.00</td>
+      </tr>
     </table>
   </section>
 
