--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,22 @@
       padding: 0;
     }
 
+    /* ✅ Fixed header layout */
     header {
-      padding: 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap; /* allows wrapping on small screens */
+      padding: 20px 30px;
+      text-align: left;
     }
 
-    h1 { margin: 0; font-size: 28px; }
+    header h1 {
+      font-size: 26px;
+      margin: 10px 0;
+      flex: 1 1 200px;
+      color: #00b4d8;
+    }
 
     .btn {
       background-color: #00b4d8;
@@ -29,6 +40,7 @@
       text-decoration: none;
       font-weight: bold;
       transition: background 0.3s;
+      flex-shrink: 0;
     }
 
     .btn:hover {
@@ -50,6 +62,7 @@
 
     .social-icons {
       margin-top: 20px;
+      text-align: center;
     }
 
     .social-icons a {
@@ -73,6 +86,21 @@
       padding: 20px;
       font-size: 14px;
       color: #ccc;
+    }
+
+    /* ✅ Mobile friendly header fix */
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      header h1 {
+        font-size: 22px;
+      }
+      .btn {
+        margin-top: 10px;
+      }
     }
   </style>
 </head>
