--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Md. Arifuzzaman Shaon - Portfolio</title>
+  <title>Arifuzzaman Shaon - Portfolio</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -115,8 +115,8 @@
 
   <header>
     <img src="profile.png" alt="Profile Photo" class="profile-img">
-    <h1>Md. Arifuzzaman Shaon</h1>
-    <p>Welfare Officer | Human Resource Management | Gazipur, Bangladesh</p>
+    <h1>Arifuzzaman Shaon</h1>
+    <p>Welfare Officer | Human Resource Management | Chowgacha,Jessore,Khulna, Bangladesh</p>
 
     <!-- Social Media Icons (SVG CDN version) -->
     <div class="social-icons">
@@ -147,14 +147,14 @@
   <section>
     <h2>About Me</h2>
     <p>
-      I am Md. Arifuzzaman Shaon, a passionate HR professional currently working as a Welfare Officer 
+      I am Arifuzzaman Shaon, a passionate HR professional currently working as a Welfare Officer 
       at AMANN Bangladesh Ltd. With a strong background in Human Resource Management, 
       I focus on employee relations, team supervision, and ensuring a healthy workplace environment.
       My vision is to grow as a skilled HR leader who creates value through dedication and empathy.
     </p>
   </section>
 
-  <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
+  <footer>© 2025 Arifuzzaman Shaon | All Rights Reserved</footer>
 
 </body>
 </html>
