--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Education - Md. Arifuzzaman Shaon</title>
+  <title>Education - Arifuzzaman Shaon</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -75,7 +75,7 @@
 <body>
 
   <header>
-    <h1>🎓 Education - Md. Arifuzzaman Shaon</h1>
+    <h1>🎓 Education - Arifuzzaman Shaon</h1>
     <a href="index.html" class="btn">🏠 Back to Home</a>
   </header>
 
@@ -127,6 +127,6 @@
     </table>
   </section>
 
-  <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
+  <footer>© 2025 Arifuzzaman Shaon | All Rights Reserved</footer>
 </body>
 </html>
