--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <header>
     <img src="profile.png" alt="Profile Photo" class="profile-img">
     <h1>Arifuzzaman Shaon</h1>
-    <p>Welfare Officer | Human Resource Management | Chowgacha,Jessore,Khulna, Bangladesh</p>
+    <p>Welfare Officer |PGD-HRM |MBA-HRM | Chowgacha,Jessore,Khulna, Bangladesh</p>
 
     <!-- Social Media Icons (SVG CDN version) -->
     <div class="social-icons">
@@ -149,7 +149,7 @@
     <p>
       I am Arifuzzaman Shaon, a passionate HR professional currently working as a Welfare Officer 
       at AMANN Bangladesh Ltd. With a strong background in Human Resource Management, 
-      I focus on employee relations, team supervision, and ensuring a healthy workplace environment.
+      I focus on employee relations, Salary Payment Administration, Employee Supervision and ensuring a healthy workplace environment.
       My vision is to grow as a skilled HR leader who creates value through dedication and empathy.
     </p>
   </section>
