--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - Md. Arifuzzaman Shaon</title>
+  <title>Contact - Arifuzzaman Shaon</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -133,7 +133,7 @@
     <h2>Get in Touch</h2>
     <p>Email: <a href="mailto:hr.arifuzzamanshaon@gmail.com">hr.arifuzzamanshaon@gmail.com</a></p>
     <p>Instagram: <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">@arifuzzamanshaon</a></p>
-    <p>Facebook: <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Md. Arifuzzaman Shaon</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Arifuzzaman Shaon</a></p>
 
     <div class="social-icons">
       <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
@@ -155,7 +155,7 @@
   </section>
 
   <footer>
-    © 2025 Md. Arifuzzaman Shaon | All Rights Reserved
+    © 2025 Arifuzzaman Shaon | All Rights Reserved
   </footer>
 
 </body>
