--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <header>
     <img src="profile.png" alt="Profile Photo" class="profile-img">
     <h1>Arifuzzaman Shaon</h1>
-    <p>Welfare Officer |PGD-HRM |MBA-HRM | Chowgacha,Jessore,Khulna, Bangladesh</p>
+    <p>Welfare Officer | PGD-HRM | MBA-HRM | Dighalsingha,Chowgacha,Chowgacha,Jessore.</p>
 
     <!-- Social Media Icons (SVG CDN version) -->
     <div class="social-icons">
