--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
     <h2>Get in Touch</h2>
     <p>Email: <a href="mailto:hr.arifuzzamanshaon@gmail.com">hr.arifuzzamanshaon@gmail.com</a></p>
     <p>Instagram: <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">@arifuzzamanshaon</a></p>
-    <p>Facebook: <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Arifuzzaman Shaon</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/thearifuzzamanshaon" target="_blank">Arifuzzaman Shaon</a></p>
 
     <div class="social-icons">
       <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
