--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <!-- Social Media Icons (SVG CDN version) -->
     <div class="social-icons">
-      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
+      <a href="https://www.facebook.com/thearifuzzamanshaon" target="_blank">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook">
       </a>
       <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">
