--- a/experience.html
+++ b/experience.html
@@ -86,13 +86,13 @@
       <tr>
         <td>Supervisor (Contractual Employee)</td>
         <td>ABID Enterprise</td>
-        <td>Dec 2016 – June 2025</td>
+        <td>-</td>
         <td>Telipara, Gazipur City Corporation, Gazipur-1702</td>
       </tr>
       <tr>
         <td>Welfare Officer</td>
         <td>AMANN Bangladesh Ltd.</td>
-        <td>July 2025 – Present</td>
+        <td>Present</td>
         <td>Tapirbari, Mawna, Sreepur, Gazipur</td>
       </tr>
     </table>
