--- a/experience.html
+++ b/experience.html
@@ -84,16 +84,16 @@
     <table>
       <tr><th>Position</th><th>Organization</th><th>Duration</th><th>Location</th></tr>
       <tr>
-        <td>Supervisor (Contractual Employee)</td>
-        <td>ABID Enterprise</td>
-        <td>-</td>
-        <td>Telipara, Gazipur City Corporation, Gazipur-1702</td>
+        <td>Welfare Officer</td>
+        <td>AMANN Bangladesh Ltd.e</td>
+        <td>Present</td>
+        <td>Plot # R.S. 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur – 1740</td>
       </tr>
       <tr>
-        <td>Welfare Officer</td>
-        <td>AMANN Bangladesh Ltd.</td>
-        <td>Present</td>
-        <td>Tapirbari, Mawna, Sreepur, Gazipur</td>
+        <td>Contractual Employee Supervisor</td>
+        <td>Abid Enterprise Ltd.</td>
+        <td>-</td>
+        <td>H#432, T&T Rd, Telipara, Gazipur City Corporation,Gazipur-1702.</td>
       </tr>
     </table>
   </section>
