--- a/experience.html
+++ b/experience.html
@@ -85,7 +85,7 @@
       <tr><th>Position</th><th>Organization</th><th>Duration</th><th>Location</th></tr>
       <tr>
         <td>Welfare Officer</td>
-        <td>AMANN Bangladesh Ltd.e</td>
+        <td>AMANN Bangladesh Ltd.</td>
         <td>Present</td>
         <td>Plot # R.S. 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur – 1740</td>
       </tr>
