--- a/education.html
+++ b/education.html
@@ -1,125 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Education - Arifuzzaman Shaon</title>
+  <meta name="description" content="Education details of Arifuzzaman Shaon." />
+
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0; padding: 0;
-      text-align: center;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: white;
+    :root{
+      --primary:#00b4d8;
+      --primary-dark:#0077b6;
+      --text:#ffffff;
+      --muted:rgba(255,255,255,.80);
+      --line:rgba(255,255,255,.18);
+      --cell-line:rgba(255,255,255,.22);
+      --row-alt:rgba(255,255,255,.05);
+      --head-bg:rgba(255,255,255,.10);
     }
 
-    header { padding: 40px 20px; }
-    h1 { color: #00b4d8; font-size: 26px; margin-bottom: 10px; }
+    *{ box-sizing:border-box; margin:0; padding:0; }
 
-    a.btn {
-      background-color: #00b4d8;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a.btn:hover { background-color: #0077b6; }
-
-    section {
-      max-width: 900px;
-      margin: 30px auto;
-      background: rgba(255,255,255,0.1);
-      border-radius: 15px;
-      padding: 20px;
-      text-align: left;
-      overflow-x: auto; /* Responsive scroll for small screens */
+    body{
+      font-family:"Segoe UI", system-ui, -apple-system, Arial, sans-serif;
+      min-height:100vh;
+      color:var(--text);
+      background:linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      display:flex;
+      flex-direction:column;
+      text-align:center;
     }
 
-    h2 { color: #00b4d8; text-align: center; margin-bottom: 15px; }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      min-width: 600px; /* Keep structure on small screens */
+    header, main, footer{
+      width:100%;
+      max-width:980px;
+      margin:0 auto;
+      padding-left:18px;
+      padding-right:18px;
     }
 
-    th, td {
-      border: 1px solid rgba(255,255,255,0.3);
-      padding: 10px;
-      text-align: center;
-      white-space: nowrap;
+    header{
+      padding-top:40px;
+      padding-bottom:12px;
     }
 
-    th {
-      background: rgba(255,255,255,0.2);
-      color: #00b4d8;
+    h1{
+      margin-top:8px;
+      font-size:28px;
+      letter-spacing:.3px;
     }
 
-    tr:nth-child(even) { background: rgba(255,255,255,0.05); }
-
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      color: #ccc;
-      font-size: 14px;
+    .subtitle{
+      margin-top:6px;
+      font-size:14.5px;
+      line-height:1.45;
+      color:var(--muted);
     }
 
-    @media (max-width: 600px) {
-      section { padding: 10px; }
-      table { font-size: 13px; }
-      h1 { font-size: 22px; }
+    .btn-container{ margin:18px 0 6px; }
+
+    .btn{
+      display:inline-block;
+      margin:8px 7px;
+      padding:12px 22px;
+      border-radius:999px;
+      text-decoration:none;
+      font-weight:700;
+      font-size:14px;
+      color:#fff;
+      background:var(--primary);
+      transition:background .2s ease, transform .2s ease, box-shadow .2s ease;
+      box-shadow:0 8px 18px rgba(0,0,0,.25);
+    }
+    .btn:hover{
+      background:var(--primary-dark);
+      transform:translateY(-1px);
+      box-shadow:0 10px 22px rgba(0,0,0,.30);
+    }
+
+    main{
+      flex:1;
+      padding-top:18px;
+      padding-bottom:24px;
+      text-align:left;
+    }
+
+    section{
+      max-width:900px;
+      margin:0 auto;
+    }
+
+    h2{
+      color:var(--primary);
+      font-size:22px;
+      margin-bottom:12px;
+      border-bottom:1px solid var(--line);
+      padding-bottom:8px;
+    }
+
+    /* ===== Responsive "normal" table (NO horizontal sliding bar) ===== */
+    table{
+      width:100%;
+      border-collapse:collapse;
+      table-layout:fixed; /* forces the table to fit the screen width */
+      border:1px solid var(--line);
+      border-radius:12px;
+      overflow:hidden; /* keeps rounded corners clean */
+      background:rgba(0,0,0,.10);
+    }
+
+    /* Column widths to help fit on all screens */
+    col.degree   { width:26%; }
+    col.inst     { width:34%; }
+    col.subject  { width:26%; }
+    col.year     { width:14%; }
+
+    th, td{
+      border:1px solid var(--cell-line);
+      padding:12px 10px;
+      font-size:clamp(12px, 1.4vw, 14px);
+      line-height:1.35;
+      vertical-align:top;
+
+      /* KEY: allow wrapping so it fits any screen */
+      white-space:normal;
+      overflow-wrap:anywhere;
+      word-break:break-word;
+      hyphens:auto;
+      text-align:left;
+    }
+
+    th{
+      background:var(--head-bg);
+      color:var(--primary);
+      font-weight:800;
+      text-align:center;
+    }
+
+    td.year{
+      text-align:center;
+      white-space:nowrap; /* keep year short */
+    }
+
+    tr:nth-child(even) td{
+      background:var(--row-alt);
+    }
+
+    footer{
+      padding:16px 18px 22px;
+      font-size:13px;
+      color:rgba(255,255,255,.65);
+      text-align:center;
+    }
+
+    @media (max-width:600px){
+      header{ padding-top:28px; }
+      h1{ font-size:22px; }
+      .subtitle{ font-size:13px; }
+      .btn{ padding:10px 16px; font-size:13px; margin:6px 5px; }
+
+      th, td{
+        padding:10px 8px; /* tighter on mobile */
+      }
     }
   </style>
 </head>
-<body>
 
+<body>
   <header>
-    <h1>🎓 Education - Arifuzzaman Shaon</h1>
-    <a href="index.html" class="btn">🏠 Back to Home</a>
+    <h1>Education</h1>
+    <p class="subtitle">Arifuzzaman Shaon</p>
+
+    <div class="btn-container">
+      <a href="index.html" class="btn">Back to Home</a>
+      <a href="experience.html" class="btn">Experience</a>
+      <a href="contact.html" class="btn">Contact</a>
+    </div>
   </header>
 
-  <section>
-    <h2>Education Details</h2>
-    <table>
-      <tr>
-        <th>Degree</th>
-        <th>Institute</th>
-        <th>Subject</th>
-        <th>Year</th>
-      </tr>
-      <tr>
-        <td>Postgraduate Diploma (PGD)</td>
-        <td>Academy of Business Professionals</td>
-        <td>Human Resource Management</td>
-        <td>Running</td>
-      </tr>
-      <tr>
-        <td>Masters of Business Administration (MBA)</td>
-        <td>Uttara University</td>
-        <td>Human Resource Management</td>
-        <td>2024</td>
-      </tr>
-      <tr>
-        <td>Bachelor of Business Studies (BBS)</td>
-        <td>Bhawal Badre Alam Govt. College</td>
-        <td>Business Studies</td>
-        <td>2019</td>
-      </tr>
-      <tr>
-        <td>Higher Secondary Certificate (HSC)</td>
-        <td>Dr. Adbur Razzak Municipal College</td>
-        <td>Business Studies</td>
-        <td>2016</td>
-      </tr>
-      <tr>
-        <td>Secondary School Certificate (SSC)</td>
-        <td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td>
-        <td>Business Studies</td>
-        <td>2014</td>
-      </tr>
-    </table>
-  </section>
+  <main>
+    <section>
+      <h2>Education Details</h2>
+
+      <table aria-label="Education Details">
+        <colgroup>
+          <col class="degree" />
+          <col class="inst" />
+          <col class="subject" />
+          <col class="year" />
+        </colgroup>
+
+        <thead>
+          <tr>
+            <th>Degree</th>
+            <th>Institute</th>
+            <th>Subject</th>
+            <th>Year</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>Postgraduate Diploma (PGD)</td>
+            <td>Academy of Business Professionals</td>
+            <td>Human Resource Management</td>
+            <td class="year">Running</td>
+          </tr>
+          <tr>
+            <td>Masters of Business Administration (MBA)</td>
+            <td>Uttara University</td>
+            <td>Human Resource Management</td>
+            <td class="year">2024</td>
+          </tr>
+          <tr>
+            <td>Bachelor of Business Studies (BBS)</td>
+            <td>Bhawal Badre Alam Govt. College</td>
+            <td>Business Studies</td>
+            <td class="year">2019</td>
+          </tr>
+          <tr>
+            <td>Higher Secondary Certificate (HSC)</td>
+            <td>Dr. Abdur Razzak Municipal College</td>
+            <td>Business Studies</td>
+            <td class="year">2016</td>
+          </tr>
+          <tr>
+            <td>Secondary School Certificate (SSC)</td>
+            <td>Chowgacha Hazi Sarder Martuz Ali Secondary School</td>
+            <td>Business Studies</td>
+            <td class="year">2014</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </main>
 
   <footer>© 2026 Arifuzzaman Shaon | All Rights Reserved</footer>
 </body>
