--- a/experience.html
+++ b/experience.html
@@ -1,102 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Work Experience - Arifuzzaman Shaon</title>
+  <meta name="description" content="Work experience of Arifuzzaman Shaon." />
+
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0; padding: 0;
-      text-align: center;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: white;
+    :root{
+      --primary:#00b4d8;
+      --primary-dark:#0077b6;
+      --text:#ffffff;
+      --muted:rgba(255,255,255,.80);
+
+      --frame:rgba(255,255,255,.22);   /* outside border */
+      --grid: rgba(255,255,255,.16);   /* inside grid lines */
+      --line: rgba(255,255,255,.18);
     }
 
-    header { padding: 40px 20px; }
-    h1 { color: #00b4d8; font-size: 26px; margin-bottom: 10px; }
+    *{ box-sizing:border-box; margin:0; padding:0; }
 
-    a.btn {
-      background-color: #00b4d8;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a.btn:hover { background-color: #0077b6; }
-
-    section {
-      max-width: 900px;
-      margin: 30px auto;
-      background: rgba(255,255,255,0.1);
-      border-radius: 15px;
-      padding: 20px;
-      text-align: left;
-      overflow-x: auto;
+    body{
+      font-family:"Segoe UI", system-ui, -apple-system, Arial, sans-serif;
+      min-height:100vh;
+      color:var(--text);
+      background:linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      display:flex;
+      flex-direction:column;
+      text-align:center;
     }
 
-    h2 { color: #00b4d8; text-align: center; margin-bottom: 15px; }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      min-width: 600px;
+    header, main, footer{
+      width:100%;
+      max-width:980px;
+      margin:0 auto;
+      padding-left:18px;
+      padding-right:18px;
     }
 
-    th, td {
-      border: 1px solid rgba(255,255,255,0.3);
-      padding: 10px;
-      text-align: center;
-      white-space: nowrap;
+    header{
+      padding-top:40px;
+      padding-bottom:12px;
     }
 
-    th {
-      background: rgba(255,255,255,0.2);
-      color: #00b4d8;
+    h1{
+      margin-top:8px;
+      font-size:28px;
+      letter-spacing:.3px;
     }
 
-    tr:nth-child(even) { background: rgba(255,255,255,0.05); }
-
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      color: #ccc;
-      font-size: 14px;
+    .subtitle{
+      margin-top:6px;
+      font-size:14.5px;
+      line-height:1.45;
+      color:var(--muted);
     }
 
-    @media (max-width: 600px) {
-      section { padding: 10px; }
-      table { font-size: 13px; }
-      h1 { font-size: 22px; }
+    .btn-container{ margin:18px 0 6px; }
+
+    .btn{
+      display:inline-block;
+      margin:8px 7px;
+      padding:12px 22px;
+      border-radius:999px;
+      text-decoration:none;
+      font-weight:700;
+      font-size:14px;
+      color:#fff;
+      background:var(--primary);
+      transition:background .2s ease, transform .2s ease, box-shadow .2s ease;
+      box-shadow:0 8px 18px rgba(0,0,0,.25);
+    }
+    .btn:hover{
+      background:var(--primary-dark);
+      transform:translateY(-1px);
+      box-shadow:0 10px 22px rgba(0,0,0,.30);
+    }
+
+    main{
+      flex:1;
+      padding-top:18px;
+      padding-bottom:24px;
+      text-align:left;
+    }
+
+    /* No “boxy” section/card */
+    section{
+      max-width:900px;
+      margin:0 auto;
+      background:none;
+      border:none;
+      box-shadow:none;
+      border-radius:0;
+      padding:0;
+    }
+
+    h2{
+      color:var(--primary);
+      font-size:22px;
+      margin-bottom:12px;
+      border-bottom:1px solid var(--line);
+      padding-bottom:8px;
+    }
+
+    /* ===== Table border FIX (proper outer border) ===== */
+    .table-frame{
+      border:1px solid var(--frame);
+      border-radius:12px;
+      overflow:hidden;      /* keeps rounded corners */
+      background:transparent;
+    }
+
+    table{
+      width:100%;
+      border-collapse:collapse;
+      table-layout:fixed;   /* forces fit to any screen width */
+      background:transparent;
+    }
+
+    /* Column widths */
+    col.position { width:18%; }
+    col.org      { width:22%; }
+    col.duration { width:12%; }
+    col.location { width:48%; }
+
+    th, td{
+      border:1px solid var(--grid);
+      padding:12px 10px;
+      font-size:clamp(12px, 1.4vw, 14px);
+      line-height:1.35;
+      vertical-align:top;
+
+      /* no fills */
+      background:transparent;
+
+      /* allow wrapping so no horizontal scroll */
+      white-space:normal;
+      overflow-wrap:anywhere;
+      word-break:break-word;
+      hyphens:auto;
+
+      text-align:left;
+    }
+
+    th{
+      color:var(--primary);
+      font-weight:800;
+      text-align:center;
+    }
+
+    td.center{
+      text-align:center;
+      white-space:nowrap;
+    }
+
+    /* Remove borders at outside edges (frame handles outside border) */
+    th:first-child, td:first-child{ border-left:none; }
+    th:last-child,  td:last-child { border-right:none; }
+    thead tr:first-child th{ border-top:none; }
+    tbody tr:last-child  td{ border-bottom:none; }
+
+    footer{
+      padding:16px 18px 22px;
+      font-size:13px;
+      color:rgba(255,255,255,.65);
+      text-align:center;
+    }
+
+    @media (max-width:600px){
+      header{ padding-top:28px; }
+      h1{ font-size:22px; }
+      .subtitle{ font-size:13px; }
+      .btn{ padding:10px 16px; font-size:13px; margin:6px 5px; }
+      th, td{ padding:10px 8px; }
     }
   </style>
 </head>
-<body>
 
+<body>
   <header>
-    <h1>💼 Work Experience - Arifuzzaman Shaon</h1>
-    <a href="index.html" class="btn">🏠 Back to Home</a>
+    <h1>Work Experience</h1>
+    <p class="subtitle">Arifuzzaman Shaon</p>
+
+    <div class="btn-container">
+      <a href="index.html" class="btn">Back to Home</a>
+      <a href="education.html" class="btn">Education</a>
+      <a href="contact.html" class="btn">Contact</a>
+    </div>
   </header>
 
-  <section>
-    <h2>Experience Details</h2>
-    <table>
-      <tr><th>Position</th><th>Organization</th><th>Duration</th><th>Location</th></tr>
-      <tr>
-        <td>Welfare Officer</td>
-        <td>AMANN Bangladesh Ltd.</td>
-        <td>Present</td>
-        <td>Plot # R.S. 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur – 1740</td>
-      </tr>
-      <tr>
-        <td>Contractual Employee Supervisor</td>
-        <td>Abid Enterprise Ltd.</td>
-        <td>-</td>
-        <td>H#432, T&T Rd, Telipara, Gazipur City Corporation,Gazipur-1702.</td>
-      </tr>
-    </table>
-  </section>
+  <main>
+    <section>
+      <h2>Experience Details</h2>
+
+      <div class="table-frame">
+        <table aria-label="Work experience table">
+          <colgroup>
+            <col class="position" />
+            <col class="org" />
+            <col class="duration" />
+            <col class="location" />
+          </colgroup>
+
+          <thead>
+            <tr>
+              <th>Position</th>
+              <th>Organization</th>
+              <th>Duration</th>
+              <th>Location</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Welfare Officer</td>
+              <td>AMANN Bangladesh Ltd.</td>
+              <td class="center">Present</td>
+              <td>Plot # R.S. 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur – 1740</td>
+            </tr>
+
+            <tr>
+              <td>Contractual Employee Supervisor</td>
+              <td>Abid Enterprise Ltd.</td>
+              <td class="center"> 1st December,2016-30th June,2025</td>
+              <td>H#432, T&amp;T Rd, Telipara, Gazipur City Corporation, Gazipur – 1702</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </main>
 
   <footer>© 2026 Arifuzzaman Shaon | All Rights Reserved</footer>
 </body>
