--- a/experience.html
+++ b/experience.html
@@ -222,7 +222,7 @@
             <tr>
               <td>Contractual Employee Supervisor</td>
               <td>Abid Enterprise Ltd.</td>
-              <td class="center"> 1st December,2016-30th June,2025</td>
+              <td class="center">—</td>
               <td>H#432, T&amp;T Rd, Telipara, Gazipur City Corporation, Gazipur – 1702</td>
             </tr>
           </tbody>
